src/resources/gateway/kustomize/argocd-istio-api/virtual-service-kiali.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "kiali"
  namespace: "istio-ingress"
spec:
  gateways:
    - "istio-ingress/istio-ingress"
  http:
    - name: "kiali"
      route:
        - destination:
            host: "kiali.kiali.svc.cluster.local"
            port:
              number: 20001
...
